# agent-rec

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: README.md  basic-trace.jsonl
schemas/: trace-event.schema.json
src/agent_rec/: __init__.py  bundle.py  claude_hooks.py  cli.py  events.py  gitmeta.py  recorder.py  report.py  scrub.py
tests/: test_bundle.py  test_claude_hooks.py  test_cli.py  test_events.py  test_recorder.py  test_report.py  test_schema.py  test_scrub.py
