[project]
name = "agent-rec"
version = "0.1.0"
description = "Local-first flight recorder for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Isaac Sanchez" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "jsonschema>=4.23.0",
]

[project.scripts]
agent-rec = "agent_rec.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_rec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
